# XRT

./: CMakeLists.txt
src/CMake/: dkms.cmake
src/runtime_src/: CMakeLists.txt
src/runtime_src/core/common/: AlignedAllocator.h  config_reader.h  xrt_profiling.h
src/runtime_src/core/common/api/: xrt_bo.cpp  xrt_kernel.cpp
src/runtime_src/core/common/xdp/: CMakeLists.txt  profile.cpp  profile.h
src/runtime_src/core/edge/sw_em/generic_pcie_hal2/: shim.h
src/runtime_src/core/include/: shim_int.h  xrt.h  xrt_mem.h
src/runtime_src/core/include/experimental/: xrt-next.h  xrt_ext.h
src/runtime_src/core/pcie/driver/linux/xocl/: devices.h  xocl_drv.h  xocl_subdev.c
src/runtime_src/core/pcie/driver/linux/xocl/subdev/: icap.c
src/runtime_src/core/pcie/driver/linux/xocl/userpf/: xocl_drv.c
src/runtime_src/core/pcie/driver/windows/include/: XoclUser_INTF.h
src/runtime_src/core/pcie/emulation/cpu_em/generic_pcie_hal2/: shim.h
src/runtime_src/core/pcie/linux/: CMakeLists.txt  perf.cpp  scan.cpp  shim.cpp  shim.h
src/runtime_src/core/pcie/tools/xbutil/: xbutil.h
src/runtime_src/core/pcie/user_aws/: perf.cpp  shim.h
src/runtime_src/core/pcie/windows/: perf.cpp  shim.cpp
src/runtime_src/xdp/: CMakeLists.txt
src/runtime_src/xdp/profile/database/: static_info_database.cpp  static_info_database.h
src/runtime_src/xdp/profile/database/static_info/: aie_util.cpp
src/runtime_src/xdp/profile/database/static_info/filetypes/: aie_control_config_filetype.cpp  aie_control_config_filetype.h  base_filetype_impl.h
src/runtime_src/xdp/profile/device/: device_intf.cpp  device_trace_logger.cpp  device_trace_logger.h  device_trace_offload.cpp  device_trace_offload.h  profile_ip_access.cpp  profile_ip_access.h  traceFifoFull.cpp  traceS2MM.cpp  trace_parser.cpp  xdp_base_device.h  xdp_xrt_device.cpp  xdp_xrt_device.h
src/runtime_src/xdp/profile/device/common/transactions/: op_init.hpp
src/runtime_src/xdp/profile/device/hal_device/: xdp_hal_device.cpp  xdp_hal_device.h
src/runtime_src/xdp/profile/device/mmapped_monitors/: mmapped_aim.cpp  mmapped_aim.h  mmapped_am.cpp  mmapped_am.h  mmapped_asm.cpp  mmapped_asm.h  mmapped_traceFifoFull.cpp  mmapped_traceFifoFull.h  mmapped_traceFifoLite.cpp  mmapped_traceFifoLite.h  mmapped_traceFunnel.cpp  mmapped_traceFunnel.h  mmapped_traceS2MM.cpp  mmapped_traceS2MM.h
src/runtime_src/xdp/profile/plugin/: CMakeLists.txt
src/runtime_src/xdp/profile/plugin/aie_access/: CMakeLists.txt  aie_access_cb.cpp  aie_access_cb.h  aie_access_impl.h  aie_access_plugin.cpp  aie_access_plugin.h
src/runtime_src/xdp/profile/plugin/aie_access/clientDev/: aie_access.cpp  aie_access.h
src/runtime_src/xdp/profile/plugin/aie_debug/: aie_debug_cb.cpp  aie_debug_cb.h  aie_debug_plugin.cpp  aie_debug_plugin.h
src/runtime_src/xdp/profile/plugin/aie_halt/: CMakeLists.txt  aie_halt_cb.cpp  aie_halt_cb.h  aie_halt_impl.h  aie_halt_plugin.cpp  aie_halt_plugin.h
src/runtime_src/xdp/profile/plugin/aie_halt/clientDev/: aie_halt.cpp  aie_halt.h
src/runtime_src/xdp/profile/plugin/aie_profile/: aie_profile_cb.cpp  aie_profile_cb.h  aie_profile_impl.h  aie_profile_plugin.cpp  aie_profile_plugin.h
src/runtime_src/xdp/profile/plugin/aie_profile/client/: aie_profile.cpp  aie_profile.h
src/runtime_src/xdp/profile/plugin/aie_profile/edge/: aie_profile.cpp
src/runtime_src/xdp/profile/plugin/aie_profile/ve2/: aie_profile.cpp
src/runtime_src/xdp/profile/plugin/aie_trace/: aie_trace_impl.h  aie_trace_plugin.cpp  aie_trace_plugin.h
src/runtime_src/xdp/profile/plugin/aie_trace/client/: aie_trace.cpp  aie_trace.h
src/runtime_src/xdp/profile/plugin/gen_asm_elf/: CMakeLists.txt  gen_asm_elf_cb.cpp  gen_asm_elf_cb.h  gen_asm_elf_impl.h  gen_asm_elf_plugin.cpp  gen_asm_elf_plugin.h
src/runtime_src/xdp/profile/plugin/gen_asm_elf/clientDev/: gen_asm_elf.cpp  gen_asm_elf.h
src/runtime_src/xdp/profile/plugin/gen_asm_elf/ve2/: gen_asm_elf.cpp  gen_asm_elf.h
src/runtime_src/xdp/profile/plugin/ml_timeline/: CMakeLists.txt  ml_timeline_cb.cpp  ml_timeline_cb.h  ml_timeline_impl.h  ml_timeline_plugin.cpp  ml_timeline_plugin.h
src/runtime_src/xdp/profile/plugin/ml_timeline/clientDev/: ml_timeline.cpp  ml_timeline.h
src/runtime_src/xdp/profile/plugin/ml_timeline/devHandle/: ml_timeline.cpp  ml_timeline.h
src/runtime_src/xdp/profile/plugin/ml_timeline/ve2/: ml_timeline.cpp  ml_timeline.h
src/runtime_src/xdp/profile/plugin/multi_pdi_prof/: CMakeLists.txt  multi_pdi_prof_cb.cpp  multi_pdi_prof_cb.h  multi_pdi_prof_impl.h  multi_pdi_prof_plugin.cpp  multi_pdi_prof_plugin.h
src/runtime_src/xdp/profile/plugin/multi_pdi_prof/clientDev/: multi_pdi_prof.cpp  multi_pdi_prof.h
src/runtime_src/xdp/profile/plugin/ocl/: ocl_profiler.cpp
src/runtime_src/xdp/profile/plugin/vp_base/: info.h
src/runtime_src/xdp/profile/writer/aie_profile/: aie_writer.cpp
src/runtime_src/xocl/core/: device.cpp
src/runtime_src/xrt/device/: device.cpp  device.h  hal.h  hal2.cpp  hal2.h  halops2.cpp  halops2.h
